--- a/components/index.html
+++ b/components/index.html
@@ -41,7 +41,7 @@
                 <p>The solutions to the climate crisis already exist. The next step is coordinated action-local to global.</p>
             </div>
             <div class="hero__grid-right">
-                <button class="button"><h3>JOIN THE MOVEMENT</h3></button>
+                <button class="button"><a href="https://www.oneearth.org/join/"><h3>JOIN THE MOVEMENT</h3></a></button>
             </div>
         </section>
     </article>
@@ -96,7 +96,11 @@
                 </div>
             </div>
         </section>
-    </article>
+
+        <section class="solution_button">
+            <button class="button"><a href="https://www.oneearth.org/solutions/"><h5>Explore the Framework</h5></a></button>
+        </section>
+    </article>    
 
     <!-- This is the roadblock section-->
     <div class="component__img">
@@ -119,7 +123,7 @@
         </section>
         <section class="roadblock__grid-right">
             <div><h5>Discover the gaps and opportunities</h5></div>
-            <div><a href="#!">View the Report</a></div>
+            <div><a href="https://mindingthegaps.oneearth.org/">View the Report</a></div>
         </section>
     </article>
 
@@ -151,7 +155,7 @@
                 <div class="text">
                     <p>Dive into stories, science, and projects that bring climate solutions to life. Our Solutions Hub is designed to inspire action and connect you to a worldwide movement of people creating change.</p>
                 </div>
-                <button class="button"><h5>Explore the Hub</h5></button>
+                <button class="button"><a href="https://www.oneearth.org/hub/"><h5>Explore the Hub</h5></a></button>
             </div>
 
             <div class="card">
@@ -161,7 +165,7 @@
                 <div class="text">
                     <p>Global transformation takes root locally. By caring for your home, you join a worldwide movement to protect our planet. Discover how your bioregion connects you to the Earth's web of life.</p>
                 </div>
-                <button class="button"><h5>Discover your Bioregion</h5></button>
+                <button class="button"><a href="https://www.oneearth.org/navigator/"><h5>Discover your Bioregion</h5></a></button>
             </div>
 
             <div class="card">
@@ -171,7 +175,7 @@
                 <div class="text">
                     <p>The blueprint of priority lands and oceans that we most urgently need to protect and restore. Learn more about the science and explore where conservation efforts will have the greatest impact.</p>
                 </div>
-                <button class="button"><h5>Start Exploring</h5></button>
+                <button class="button"><a href="https://www.globalsafetynet.app/viewer/"><h5>Start Exploring</h5></a></button>
             </div>
 
             <div class="card">
@@ -181,27 +185,70 @@
                 <div class="text">
                     <p>A powerful new tool built with our partners at Vibrant Data Labs that maps how billions in climate funding is flowing to solutions across Energy Transition, Nature Conservation, and Regenerative Agriculture.</p>
                 </div>
-                <button class="button"><h5>Discover the Data</h5></button>
+                <button class="button"><a href="https://oneearth.climatefinancetracker.com/?view=landscape-overview&xAttribute=tax_map_level1&colorBy=tax_map_level1&yMetric=distributed_funding&normalizeBy=total"><h5>Discover the Data</h5></a></button>
             </div>
         </section>
     </article>
 
+    <!-- This is the impact section-->
     <div class="component__img">
         <img srcset="img/impact-title.png 1.2x" alt="impact title" width="1500">
     </div>
 
     <article class="impact">
-        <div class="pretitle">
-            <h4>Our Impact</h4>
+        <section class="introduction--impact">
+            <div class="left part">
+                <div class="pretitle">
+                    <h4>Our Impact</h4>
+                </div>
+                <div class="title">
+                    <h2>Turning knowledge into action</h2>
+                </div>
+                <div class="text">
+                    <p>By identifying and elevating the most effective climate and biodiversity solutions we are helping shape
+                        policy, guide investments, support grassroots organizations, and galvanize a global movement dedicated
+                        to regenerating our one Earth.</p>
+                </div>
+            </div>
+            <div class="right part">
+
+            </div>
+        </section>
+        <div class="component__img">
+        <img srcset="img/impact-table.png 1.2x" alt="impact table" width="1500">
         </div>
-        <div class="title">
-            <h2>Turning knowledge into action</h2>
-        </div>
-        <div class="text">
-            <p>By identifying and elevating the most effective climate and biodiversity solutions we are helping shape
-                policy, guide investments, support grassroots organizations, and galvanize a global movement dedicated
-                to regenerating our one Earth.</p>
-        </div>
+        <section class="table--impact">
+            <table>
+                <tr>
+                    <td><h2>210</h2></td>
+                    <td>Project supported</td>
+                    <td>Real change happens from the ground up</td>
+                </tr>
+
+                <tr>
+                    <td><h2>45+</h2></td>
+                    <td>Reports produced and supported</td>
+                    <td>Knowledge rooted in leading science and data</td>
+                </tr>
+                                
+                <tr>
+                    <td><h2>$9M</h2></td>
+                    <td>Raised for solutions</td>
+                    <td>Investing in the future we know is possible</td>
+                </tr>
+
+                <tr>
+                    <td><h2>Millions</h2></td>
+                    <td>Reached through solutions-based storytelling</td>
+                    <td>Shaping a new narrative of hope and possibility</td>
+                </tr>
+            </table>
+        </section>
+
+        <section class="solution_button">
+            <button class="button"><a href="https://www.oneearth.org/reports-financials/"><h5>See our impact</h5></a></button>
+        </section>
+        
     </article>
 
     <!-- This is the network section-->
@@ -256,7 +303,7 @@
             </div>
         </section>
 
-        <button class="button"><h5>Explore our Network</h5></button>
+        <button class="button"><a href="https://www.oneearth.org/partners/"><h5>Explore our Network</h5></a></button>
             
     </article>
 
@@ -272,11 +319,11 @@
                     <h2>Donate</h2>
                 </div>
                 <div class="subbutton">
-                    <button class="button"><p>Donate Now</p></button>
-                    <button class="button"><p>Donate Crypto</p></button>
-                    <button class="button"><p>Donate Stock</p></button>
-                    <button class="button"><p>Donate Through DAF</p></button>
-                    <button class="button"><p>More Ways</p></button>
+                    <button class="button"><a href="https://www.oneearth.org/donate/">Donate Now</a></button>
+                    <button class="button"><a href="https://www.oneearth.org/crypto/">Donate Crypto</a></button>
+                    <button class="button"><a href="https://www.oneearth.org/stocks/">Donate Stock</a></button>
+                    <button class="button"><a href="https://www.oneearth.org/daf/">Donate Through DAF</a></button>
+                    <button class="button"><a href="https://www.oneearth.org/donate/#donategrid">More Ways</a></button>
                 </div>
             </div>
             
@@ -285,7 +332,7 @@
                     <h2>Subscribe</h2>
                 </div>
                 <div class="subbutton">
-                    <button class="button"><p>The One Earth Newsletter</p></button>
+                    <button class="button"><a href="https://www.oneearth.org/sign-up/">The One Earth Newsletter</a></button>
                 </div>
             </div>
 
@@ -294,14 +341,14 @@
                     <h2>Connect</h2>
                 </div>
                 <div class="subbutton">
-                    <button class="button"><p>Instagram</p></button>
-                    <button class="button"><p>Facebook</p></button>
-                    <button class="button"><p>Bluesky</p></button>
-                    <button class="button"><p>Linkedin</p></button>
-                    <button class="button"><p>TikTok</p></button>
-                    <button class="button"><p>YouTube</p></button>
-                    <button class="button"><p>Medium</p></button>
-                    <button class="button"><p>Threads</p></button>
+                    <button class="button"><a href="https://www.instagram.com/oneearth/">Instagram</a></button>
+                    <button class="button"><a href="https://www.facebook.com/oneearth/">Facebook</a></button>
+                    <button class="button"><a href="https://bsky.app/profile/oneearthofficial.bsky.social">Bluesky</a></button>
+                    <button class="button"><a href="https://www.linkedin.com/company/oneearth/">Linkedin</a></button>
+                    <button class="button"><a href="https://www.tiktok.com/@oneearthofficial?lang=en">TikTok</a></button>
+                    <button class="button"><a href="https://www.youtube.com/oneearth/?sub_confirmation=1">YouTube</a></button>
+                    <button class="button"><a href="https://medium.com/oneearth">Medium</a></button>
+                    <button class="button"><a href="https://www.threads.net/@oneearth">Threads</a></button>
                 </div>
             </div>
             
@@ -381,7 +428,6 @@
             </ul>
         </div>
         
-            
     </article>
 
 </body>
