--- a/components/index.html
+++ b/components/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- This is the header-hero section-->
     <div class="component__img">
-        <img srcset="img/header-hero.png" alt="header hero" width="1500">
+        <img src="img/header-hero.png" srcset="img/header-hero.png 1.2x" alt="header hero" width="1500">
     </div>
     <article class="header-hero">
         <section class="header">
@@ -41,14 +41,14 @@
                 <p>The solutions to the climate crisis already exist. The next step is coordinated action-local to global.</p>
             </div>
             <div class="hero__grid-right">
-                <button class="button"><a href="https://www.oneearth.org/join/"><h3>JOIN THE MOVEMENT</h3></a></button>
+                <a class="button" href="https://www.oneearth.org/join/">JOIN THE MOVEMENT</a>
             </div>
         </section>
     </article>
 
     <!-- This is the solution section-->
     <div class="component__img">
-        <img srcset="img/solution.png" alt="solution" width="1500">
+        <img src="img/solution.png" srcset="img/solution.png 1.2x" alt="solution" width="1500">
     </div>
 
     <article class="solution">
@@ -97,14 +97,14 @@
             </div>
         </section>
 
-        <section class="solution_button">
-            <button class="button"><a href="https://www.oneearth.org/solutions/"><h5>Explore the Framework</h5></a></button>
+        <section>
+            <a class="solution_button" href="https://www.oneearth.org/solutions/">Explore the Framework</a>
         </section>
     </article>    
 
     <!-- This is the roadblock section-->
     <div class="component__img">
-        <img srcset="img/roadblock.png" alt="roadblocksolution" width="1500">
+        <img src="img/roadblock.png" srcset="img/roadblock.png 1.2x" alt="roadblocksolution" width="1500">
     </div>
 
     <article class="roadblock">
@@ -129,7 +129,7 @@
 
     <!-- This is the tools section-->
     <div class="component__img">
-        <img srcset="img/tools.png" alt="tools" width="1500">
+        <img src="img/tools.png" srcset="img/tools.png 1.2x" alt="tools" width="1500">
     </div>
 
     <article class="tools">
@@ -155,7 +155,7 @@
                 <div class="text">
                     <p>Dive into stories, science, and projects that bring climate solutions to life. Our Solutions Hub is designed to inspire action and connect you to a worldwide movement of people creating change.</p>
                 </div>
-                <button class="button"><a href="https://www.oneearth.org/hub/"><h5>Explore the Hub</h5></a></button>
+                <a class="card--button" href="https://www.oneearth.org/hub/">Explore the Hub</a>
             </div>
 
             <div class="card">
@@ -165,7 +165,7 @@
                 <div class="text">
                     <p>Global transformation takes root locally. By caring for your home, you join a worldwide movement to protect our planet. Discover how your bioregion connects you to the Earth's web of life.</p>
                 </div>
-                <button class="button"><a href="https://www.oneearth.org/navigator/"><h5>Discover your Bioregion</h5></a></button>
+                <a class="card--button" href="https://www.oneearth.org/navigator/">Discover your Bioregion</a>
             </div>
 
             <div class="card">
@@ -175,7 +175,7 @@
                 <div class="text">
                     <p>The blueprint of priority lands and oceans that we most urgently need to protect and restore. Learn more about the science and explore where conservation efforts will have the greatest impact.</p>
                 </div>
-                <button class="button"><a href="https://www.globalsafetynet.app/viewer/"><h5>Start Exploring</h5></a></button>
+                <a class="card--button" href="https://www.globalsafetynet.app/viewer/">Start Exploring</a>
             </div>
 
             <div class="card">
@@ -185,14 +185,14 @@
                 <div class="text">
                     <p>A powerful new tool built with our partners at Vibrant Data Labs that maps how billions in climate funding is flowing to solutions across Energy Transition, Nature Conservation, and Regenerative Agriculture.</p>
                 </div>
-                <button class="button"><a href="https://oneearth.climatefinancetracker.com/?view=landscape-overview&xAttribute=tax_map_level1&colorBy=tax_map_level1&yMetric=distributed_funding&normalizeBy=total"><h5>Discover the Data</h5></a></button>
+                <a class="card--button" href="https://oneearth.climatefinancetracker.com/?view=landscape-overview&xAttribute=tax_map_level1&colorBy=tax_map_level1&yMetric=distributed_funding&normalizeBy=total">Discover the Data</a>
             </div>
         </section>
     </article>
 
     <!-- This is the impact section-->
     <div class="component__img">
-        <img srcset="img/impact-title.png 1.2x" alt="impact title" width="1500">
+        <img src="img/impact-title.png" srcset="img/impact-title.png 1.2x" alt="impact title" width="1500">
     </div>
 
     <article class="impact">
@@ -215,7 +215,7 @@
             </div>
         </section>
         <div class="component__img">
-        <img srcset="img/impact-table.png 1.2x" alt="impact table" width="1500">
+        <img src="img/impact-table.png" srcset="img/impact-table.png 1.2x" alt="impact table" width="1500">
         </div>
         <section class="table--impact">
             <table>
@@ -245,15 +245,15 @@
             </table>
         </section>
 
-        <section class="solution_button">
-            <button class="button"><a href="https://www.oneearth.org/reports-financials/"><h5>See our impact</h5></a></button>
+        <section >
+            <a class="solution_button" href="https://www.oneearth.org/reports-financials/">See our impact</a>
         </section>
         
     </article>
 
     <!-- This is the network section-->
     <div class="component__img">
-        <img srcset="img/network.png" alt="network" width="1500">
+        <img src="img/network.png" srcset="img/network.png 1.2x" alt="network" width="1500">
     </div>
 
     <article class="network">
@@ -303,13 +303,13 @@
             </div>
         </section>
 
-        <button class="button"><a href="https://www.oneearth.org/partners/"><h5>Explore our Network</h5></a></button>
+        <a class="solution_button" href="https://www.oneearth.org/partners/">Explore our Network</a>
             
     </article>
 
     <!-- This is the prefooter section-->
     <div class="component__img">
-        <img srcset="img/prefooter.png" alt="prefooter" width="1500">
+        <img src="img/prefooter.png" srcset="img/prefooter.png 1.2x" alt="prefooter" width="1500">
     </div>
 
     <article class="prefooter">
@@ -318,12 +318,12 @@
                 <div class="title">
                     <h2>Donate</h2>
                 </div>
-                <div class="subbutton">
-                    <button class="button"><a href="https://www.oneearth.org/donate/">Donate Now</a></button>
-                    <button class="button"><a href="https://www.oneearth.org/crypto/">Donate Crypto</a></button>
-                    <button class="button"><a href="https://www.oneearth.org/stocks/">Donate Stock</a></button>
-                    <button class="button"><a href="https://www.oneearth.org/daf/">Donate Through DAF</a></button>
-                    <button class="button"><a href="https://www.oneearth.org/donate/#donategrid">More Ways</a></button>
+                <div>
+                    <a class="subbutton" href="https://www.oneearth.org/donate/">Donate Now</a>
+                    <a class="subbutton" href="https://www.oneearth.org/crypto/">Donate Crypto</a>
+                    <a class="subbutton" href="https://www.oneearth.org/stocks/">Donate Stock</a>
+                    <a class="subbutton" href="https://www.oneearth.org/daf/">Donate Through DAF</a>
+                    <a class="subbutton" href="https://www.oneearth.org/donate/#donategrid">More Ways</a>
                 </div>
             </div>
             
@@ -331,8 +331,8 @@
                 <div class="title">
                     <h2>Subscribe</h2>
                 </div>
-                <div class="subbutton">
-                    <button class="button"><a href="https://www.oneearth.org/sign-up/">The One Earth Newsletter</a></button>
+                <div>
+                    <a class="subbutton" href="https://www.oneearth.org/sign-up/">The One Earth Newsletter</a>
                 </div>
             </div>
 
@@ -340,15 +340,15 @@
                 <div class="title">
                     <h2>Connect</h2>
                 </div>
-                <div class="subbutton">
-                    <button class="button"><a href="https://www.instagram.com/oneearth/">Instagram</a></button>
-                    <button class="button"><a href="https://www.facebook.com/oneearth/">Facebook</a></button>
-                    <button class="button"><a href="https://bsky.app/profile/oneearthofficial.bsky.social">Bluesky</a></button>
-                    <button class="button"><a href="https://www.linkedin.com/company/oneearth/">Linkedin</a></button>
-                    <button class="button"><a href="https://www.tiktok.com/@oneearthofficial?lang=en">TikTok</a></button>
-                    <button class="button"><a href="https://www.youtube.com/oneearth/?sub_confirmation=1">YouTube</a></button>
-                    <button class="button"><a href="https://medium.com/oneearth">Medium</a></button>
-                    <button class="button"><a href="https://www.threads.net/@oneearth">Threads</a></button>
+                <div>
+                    <a class="subbutton" href="https://www.instagram.com/oneearth/">Instagram</a>
+                    <a class="subbutton" href="https://www.facebook.com/oneearth/">Facebook</a>
+                    <a class="subbutton" href="https://bsky.app/profile/oneearthofficial.bsky.social">Bluesky</a>
+                    <a class="subbutton" href="https://www.linkedin.com/company/oneearth/">Linkedin</a>
+                    <a class="subbutton" href="https://www.tiktok.com/@oneearthofficial?lang=en">TikTok</a>
+                    <a class="subbutton" href="https://www.youtube.com/oneearth/?sub_confirmation=1">YouTube</a>
+                    <a class="subbutton" href="https://medium.com/oneearth">Medium</a>
+                    <a class="subbutton" href="https://www.threads.net/@oneearth">Threads</a>
                 </div>
             </div>
             
@@ -358,7 +358,7 @@
 
     <!-- This is the footer section-->
     <div class="component__img">
-        <img srcset="img/footer.png" alt="footer" width="1500">
+        <img src="img/footer.png" srcset="img/footer.png 1.2x" alt="footer" width="1500">
     </div>
 
     <article class="footer">
