Updates svg logo

--- a/components/index.html
+++ b/components/index.html
@@ -22,7 +22,8 @@
     </div>
     <article class="header-hero">
         <section class="header">
-            <img src="img/one-earth.svg" alt="One Earth" width="153" height="70">
+            <img src="img/one-earth_inv.svg" alt="One Earth" width="153" height="70">
+            
             <div class="header__nav">
                 <ul class="header__nav-list">
                     <li><a href="#!"> REPORTS</a></li>
